Update Dockerfile and add documentation

--- a/.devcontainer/.tmux.conf
+++ b/.devcontainer/.tmux.conf
@@ -10,7 +10,7 @@ set -s default-terminal 'xterm-256color'
 
 # Dracula theme configuration
 set -g @dracula-show-left-icon window
-set -g @dracula-plugins "kubernetes-context cpu-usage ram-usage time"
+set -g @dracula-plugins "cpu-usage ram-usage time"
 
 # Enable automatic restoration of tmux environment
 set -g @continuum-restore 'on'
