--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -27,6 +27,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   tmux \
   fonts-powerline \
   locales \
+  wget \
+  ca-certificates \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install Docker CLI only
@@ -38,26 +40,17 @@ RUN apt-get update && apt-get install -y lsb-release \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
+ARG USERNAME=node
+
 # Add node user to docker group
-RUN usermod -aG docker node || true
+RUN usermod -aG docker $USERNAME || true
 
 # Generate locale
 RUN locale-gen en_US.UTF-8
 
-# Install oh-my-zsh and plugins
-RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended \
-  && git clone --depth=1 https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-/home/node/.oh-my-zsh/custom}/themes/powerlevel10k \
-  && git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-/home/node/.oh-my-zsh/custom}/plugins/zsh-autosuggestions \
-  && git clone https://github.com/zsh-users/zsh-syntax-highlighting.git /usr/share/zsh-syntax-highlighting
-
-# Install tmux plugin manager
-RUN git clone https://github.com/tmux-plugins/tpm /home/node/.tmux/plugins/tpm
-
-# Ensure default node user has access to /usr/local/share
+# Ensure default user has access to /usr/local/share
 RUN mkdir -p /usr/local/share/npm-global && \
-  chown -R node:node /usr/local/share
-
-ARG USERNAME=node
+  chown -R $USERNAME:$USERNAME /usr/local/share
 
 # Persist bash history.
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" \
@@ -69,8 +62,8 @@ RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhisto
 ENV DEVCONTAINER=true
 
 # Create workspace and config directories and set permissions
-RUN mkdir -p /workspace /home/node/.claude && \
-  chown -R node:node /workspace /home/node/.claude
+RUN mkdir -p /workspace /home/$USERNAME/.claude && \
+  chown -R $USERNAME:$USERNAME /workspace /home/$USERNAME/.claude
 
 WORKDIR /workspace
 
@@ -80,17 +73,8 @@ RUN ARCH=$(dpkg --print-architecture) && \
   sudo dpkg -i "git-delta_${GIT_DELTA_VERSION}_${ARCH}.deb" && \
   rm "git-delta_${GIT_DELTA_VERSION}_${ARCH}.deb"
 
-# Copy configuration files
-COPY --chown=$USERNAME:$USERNAME .zshrc /home/$USERNAME/.zshrc
-COPY --chown=$USERNAME:$USERNAME .tmux.conf /home/$USERNAME/.tmux.conf
-COPY --chown=$USERNAME:$USERNAME .p10k.zsh /home/$USERNAME/.p10k.zsh
-
-# Fix permissions for oh-my-zsh
-RUN chown -R $USERNAME:$USERNAME /home/$USERNAME/.oh-my-zsh \
-  && chmod -R 755 /home/$USERNAME/.oh-my-zsh
-
 # Set up non-root user
-USER node
+USER $USERNAME
 
 # Install global packages
 ENV NPM_CONFIG_PREFIX=/usr/local/share/npm-global
@@ -100,8 +84,22 @@ ENV PATH=$PATH:/usr/local/share/npm-global/bin
 ENV SHELL=/bin/zsh
 
 # Set the default editor and visual
-ENV EDITOR vim
-ENV VISUAL vim
+ENV EDITOR=vim
+ENV VISUAL=vim
+
+# Install Oh My Zsh and plugins
+RUN sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)" "" --unattended && \
+    git clone https://github.com/romkatv/powerlevel10k.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/themes/powerlevel10k && \
+    git clone https://github.com/zsh-users/zsh-autosuggestions ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/plugins/zsh-autosuggestions && \
+    git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-$HOME/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+
+# Copy configuration files
+COPY --chown=$USERNAME:$USERNAME .zshrc /home/$USERNAME/.zshrc
+COPY --chown=$USERNAME:$USERNAME .tmux.conf /home/$USERNAME/.tmux.conf
+COPY --chown=$USERNAME:$USERNAME .p10k.zsh /home/$USERNAME/.p10k.zsh
+
+# Install tmux plugin manager
+RUN git clone https://github.com/tmux-plugins/tpm /home/$USERNAME/.tmux/plugins/tpm
 
 # Install Claude
 RUN npm install -g @anthropic-ai/claude-code@${CLAUDE_CODE_VERSION}
@@ -109,14 +107,17 @@ RUN npm install -g @anthropic-ai/claude-code@${CLAUDE_CODE_VERSION}
 # Install tmux plugins
 RUN /home/$USERNAME/.tmux/plugins/tpm/bin/install_plugins || true
 
-# Copy and set up firewall script
-COPY init-firewall.sh /usr/local/bin/
 USER root
-RUN chmod +x /usr/local/bin/init-firewall.sh && \
-  echo "node ALL=(root) NOPASSWD: /usr/local/bin/init-firewall.sh" > /etc/sudoers.d/node-firewall && \
-  chmod 0440 /etc/sudoers.d/node-firewall
 
 # Set zsh as the default shell
 RUN chsh -s /usr/bin/zsh $USERNAME
 
-USER node
+# Copy and set up firewall script
+COPY init-firewall.sh /usr/local/bin/
+
+ONBUILD COPY allowed-domains.txt /usr/local/etc/
+ONBUILD RUN chmod +x /usr/local/bin/init-firewall.sh && \
+  echo "node ALL=(root) NOPASSWD: /usr/local/bin/init-firewall.sh -d /usr/local/etc/allowed-domains.txt" > /etc/sudoers.d/node-firewall && \
+  chmod 0440 /etc/sudoers.d/node-firewall
+
+ONBUILD USER $USERNAME
