Set different docker-compose names for projects and worktrees

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,10 +1,12 @@
-# Proxy configuration (shared by all services)
-HTTP_PROXY=http://tinyproxy:8888
-HTTPS_PROXY=http://tinyproxy:8888
-NO_PROXY=localhost,127.0.0.1,::1,docker,tinyproxy
-http_proxy=http://tinyproxy:8888
-https_proxy=http://tinyproxy:8888
-no_proxy=localhost,127.0.0.1,::1,docker,tinyproxy
+# Proxy configuration for devcontainer (uses upstream if configured)
+DEVCONTAINER_HTTP_PROXY=http://tinyproxy-devcontainer:8888
+DEVCONTAINER_HTTPS_PROXY=http://tinyproxy-devcontainer:8888
+DEVCONTAINER_NO_PROXY=localhost,127.0.0.1,::1,docker,tinyproxy-devcontainer,tinyproxy-dind
+
+# Proxy configuration for dind (no upstream, direct access only)
+DIND_HTTP_PROXY=http://tinyproxy-dind:8888
+DIND_HTTPS_PROXY=http://tinyproxy-dind:8888
+DIND_NO_PROXY=localhost,127.0.0.1,::1,docker,tinyproxy-devcontainer,tinyproxy-dind
 
 # Upstream proxy configuration (optional)
 # Tinyproxy will forward requests through upstream proxy if configured
@@ -18,11 +20,6 @@ no_proxy=localhost,127.0.0.1,::1,docker,tinyproxy
 #UPSTREAM_PROXY_TYPE=socks5
 #UPSTREAM_PROXY_HOST=host.docker.internal
 #UPSTREAM_PROXY_PORT=1080
-
-# Docker configuration
-DOCKER_HOST=tcp://docker:2376
-DOCKER_TLS_VERIFY=1
-DOCKER_CERT_PATH=/certs/client
 
 # Claude Code configuration
 CLAUDE_CONFIG_DIR=/home/claude/.claude
