Update images, configs, docs, add codex config

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,7 +11,7 @@
   "remoteEnv": {
     "JETBRAINS_REMOTE_RUN": "true",
     "PROJECT_NAME": "${localWorkspaceFolderBasename}",
-    "DOCKER_HOST": "tcp://docker-dind:2376",
+    "DOCKER_HOST": "tcp://docker:2376",
     "DOCKER_TLS_VERIFY": "1",
     "DOCKER_CERT_PATH": "/certs/client"
   }
