--- a/tinyproxy-dind/tinyproxy.conf
+++ b/tinyproxy-dind/tinyproxy.conf
@@ -1,16 +1,11 @@
-User tinyproxy
-Group tinyproxy
+# Tinyproxy configuration - Whitelist mode
+User nobody
+Group nogroup
 Port 8888
+Listen 0.0.0.0
 Timeout 600
-DefaultErrorFile "/usr/share/tinyproxy/default.html"
-StatFile "/usr/share/tinyproxy/stats.html"
+MaxClients 100
 LogLevel Info
-
-# Allow connections from Docker networks
-Allow 127.0.0.1
-Allow 172.16.0.0/12
-Allow 192.168.0.0/16
-Allow 10.0.0.0/8
 
 # Important: No upstream proxy configuration
 # This proxy provides direct access only to whitelisted domains
@@ -24,10 +19,3 @@ FilterExtended Yes
 
 # Don't add headers that reveal proxy
 DisableViaHeader Yes
-
-# Connection settings
-MaxClients 100
-StartServers 10
-MinSpareServers 5
-MaxSpareServers 20
-MaxRequestsPerChild 0
